restyled logo to see if border bug exists on mobile

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -30,7 +30,7 @@ option {
 
 .logo {
     color: #FDF0D5;
-    /* -webkit-text-stroke: 1px #c1121f; */
+    -webkit-text-stroke: 1px #c1121f;
 }
     
 .serif {
